remove messages and echo

--- a/content/art.html
+++ b/content/art.html
@@ -7,21 +7,7 @@ title: Art
 
 
 
-<p>Through Silence, posted on April 8, 2021, Themes from Art has discussed seven themes, incorporating one poem, movie, rock song, and impressionist painting for each, a total of 28 pieces of art. The table below lists each of them.</p>
-<pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## -- Attaching packages --------------------------------------- tidyverse 1.3.0 --</code></pre>
-<pre><code>## v ggplot2 3.3.2     v purrr   0.3.4
-## v tibble  3.0.4     v dplyr   1.0.2
-## v tidyr   1.1.2     v stringr 1.4.0
-## v readr   1.3.1     v forcats 0.5.0</code></pre>
-<pre><code>## Warning: package &#39;tibble&#39; was built under R version 4.0.3</code></pre>
-<pre><code>## -- Conflicts ------------------------------------------ tidyverse_conflicts() --
-## x dplyr::filter() masks stats::filter()
-## x dplyr::lag()    masks stats::lag()</code></pre>
-<pre class="r"><code>art &lt;- readxl::read_xlsx(path = &quot;C:/Users/Rees Morrison/Documents/R/Projects/CLIENTS/Themes/Art and Artists.xlsx&quot;)
-artTable &lt;- kableExtra::kable(art)
-
-artTable</code></pre>
+<p>Through Silence, posted on April 8, 2021, Themes from Art has discussed seven themes, eliciting subthemes from one poem, movie, rock song, and impressionist painting for each theme, a total of 28 artistic works. The table below lists each of them.</p>
 <table>
 <thead>
 <tr>
