subthemes with inline `r code`

--- a/content/subthemes.html
+++ b/content/subthemes.html
@@ -7,7 +7,7 @@ title: Subthemes
 
 
 
-<p>In the seven themes written about so far, through Silence posted on April 8, 2021, we have considered subthemes.</p>
+<p>In the seven themes addressed so far, through Silence posted on April 8, 2021, Themes from Art has written about 138 subthemes.</p>
 <table>
 <thead>
 <tr>
@@ -1439,7 +1439,7 @@ Silence
 Death
 </td>
 <td style="text-align:left;">
-Silence Hap
+Silence Bell Tolls
 </td>
 </tr>
 <tr>
@@ -1450,7 +1450,7 @@ Silence
 Reverence or Awe
 </td>
 <td style="text-align:left;">
-Silence Hap
+Silence Bell Tolls
 </td>
 </tr>
 <tr>
@@ -1461,7 +1461,7 @@ Silence
 Cessation
 </td>
 <td style="text-align:left;">
-Silence Hap
+Silence Bell Tolls
 </td>
 </tr>
 <tr>
@@ -1472,7 +1472,7 @@ Silence
 Prayer
 </td>
 <td style="text-align:left;">
-Silence Hap
+Silence Bell Tolls
 </td>
 </tr>
 <tr>
