getting the Excel files into the right directory

--- a/content/subthemes.html
+++ b/content/subthemes.html
@@ -2,12 +2,12 @@
 date: "2021-04-10"
 description: Subthemes written about
 menu: main
-title:
+title: Subthemes
 ---
 
 
 
-<p>In the seven themes addressed so far, through Silence posted on April 8, 2021, Themes from Art has written about 138 subthemes.</p>
+<p>In the nine themes addressed so far, through Death posted on May 4, 2021, Themes from Art has written about 172 subthemes. The table below lists them.</p>
 <table>
 <thead>
 <tr>
@@ -1539,6 +1539,380 @@ Ineffable
 </td>
 <td style="text-align:left;">
 Silence Sounds
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Evolution
+</td>
+<td style="text-align:left;">
+Beauty Additional
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Jealousy
+</td>
+<td style="text-align:left;">
+Beauty Additional
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Brains or Beauty
+</td>
+<td style="text-align:left;">
+Beauty Additional
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Culturally Defined:
+</td>
+<td style="text-align:left;">
+Beauty Byron
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Gendered
+</td>
+<td style="text-align:left;">
+Beauty Byron
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Beauty as Comparison
+</td>
+<td style="text-align:left;">
+Beauty Byron
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Eyes of the Beholder
+</td>
+<td style="text-align:left;">
+Beauty Flack
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Cosmetics, Contours and Clothes
+</td>
+<td style="text-align:left;">
+Beauty Flack
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+More Than Just the Face
+</td>
+<td style="text-align:left;">
+Beauty Flack
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Components and Composites
+</td>
+<td style="text-align:left;">
+Beauty Flack
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Beauty in Nature
+</td>
+<td style="text-align:left;">
+Beauty Additional
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Beauty in Man-Made Artifacts
+</td>
+<td style="text-align:left;">
+Beauty Additional
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Situation Influences
+</td>
+<td style="text-align:left;">
+Beauty Additional
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Physical Characteristics
+</td>
+<td style="text-align:left;">
+Beauty Taxi
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+La Femme Fatale
+</td>
+<td style="text-align:left;">
+Beauty Taxi
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Different than Sexy
+</td>
+<td style="text-align:left;">
+Beauty Taxi
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Beauty
+</td>
+<td style="text-align:left;">
+Only Skin Deep
+</td>
+<td style="text-align:left;">
+Beauty Taxi
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Survivor Guilt
+</td>
+<td style="text-align:left;">
+Death Addl
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Funerals and Eulogies
+</td>
+<td style="text-align:left;">
+Death Addl
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Alter History
+</td>
+<td style="text-align:left;">
+Death Addl
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Near-Death Experiences
+</td>
+<td style="text-align:left;">
+Death Addl
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Accidents
+</td>
+<td style="text-align:left;">
+Death Bonnie
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Suicide or Downhill Slide
+</td>
+<td style="text-align:left;">
+Death Bonnie
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Civilian Jobs that Kill Workers
+</td>
+<td style="text-align:left;">
+Death Bonnie
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Final Physical Shut Down
+</td>
+<td style="text-align:left;">
+Death Donne
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Inevitability
+</td>
+<td style="text-align:left;">
+Death Donne
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Philosophical Pondering
+</td>
+<td style="text-align:left;">
+Death Donne
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Courage Facing Imminent Death
+</td>
+<td style="text-align:left;">
+Death Donne
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Capital Punishment
+</td>
+<td style="text-align:left;">
+Death Hanged
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Murder
+</td>
+<td style="text-align:left;">
+Death Hanged
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Mass Deaths: Wars, Pandemics, Natural Disasters
+</td>
+<td style="text-align:left;">
+Death Hanged
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Grief and Heartbreak
+</td>
+<td style="text-align:left;">
+Death Honey
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Afterlife
+</td>
+<td style="text-align:left;">
+Death Honey
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Death
+</td>
+<td style="text-align:left;">
+Religion
+</td>
+<td style="text-align:left;">
+Death Honey
 </td>
 </tr>
 </tbody>
