took too long to build on Netlify, and I put in a title.  Incomplete final line on two sports

--- a/content/subthemes.html
+++ b/content/subthemes.html
@@ -2,7 +2,7 @@
 date: "2021-04-10"
 description: Subthemes written about 
 menu: main
-title: [] 
+title: [Subthemes] 
 ---
 
 
@@ -2797,3 +2797,9 @@ Racers Before the Stands
 </tr>
 </tbody>
 </table>
+<div id="incomplete-final-line-found-on-two-sports-boxer-and-athlete" class="section level1">
+<h1>“incomplete final line found on” two sports (Boxer and Athlete)</h1>
+</div>
+<div id="am-build-exceeded-maximum-allowed-runtime" class="section level1">
+<h1>9:22:40 AM: Build exceeded maximum allowed runtime</h1>
+</div>
