updated, or trying to, art and artists

--- a/art.html
+++ b/art.html
@@ -352,6 +352,7 @@ pre code {
 
 
 <!-- BlogGH.Rmd creates the Excel file read in here -->
+<!-- What do I do to get this posted? -->
 <p>Through Night, posted on November 5, 2021, Themes from Art has discussed 24 themes, eliciting subthemes from one poem, movie, rock song, and impressionist painting for each theme, a total of 96 artistic works. The table below lists each of them by genre.</p>
 <p>The second table groups the artistic works by theme.</p>
 <table>
