--- a/content/subthemes.html
+++ b/content/subthemes.html
@@ -575,6 +575,7 @@ pre code {
 </div>
 
 
+<p>Through Dogs, posted in early January of 2022, Themes from Art has discussed 29 Themes, eliciting 494 subthemes from one poem, movie, rock song, and impressionist painting for each Theme, a total of 116 artistic works. The table below lists each of the subthemes and their art work, by Theme.</p>
 <!-- # Add new themes and subthemes -->
 <!-- Read in the latest version from Subthemes Combined, then add new themes and rowbind those dataframes to what is read in (subthemes).  Save the new material,  -->
 <!-- # Many lines below are commented out because I started mid-stream.  See the explanation later.  the blog posts are read in from the .md files.  At some point, I should uncomment the code and redo it all, in case I have edited subtheme names or added new ones -->
@@ -582,7 +583,7 @@ pre code {
 <!-- # ClothesSubsFire <- readLines(con = "C:/Users/Rees Morrison/Documents/R/Projects/CLIENTS/Themes/BlogThemes1/content/post/2021-08-30-clothes-from-play-with-fire-a-song-by-the-rolling-stones/ClothesFire.md") -->
 <!-- # ClothesSubsFire <- str_extract_all(string = ClothesSubsFire, pattern = "(?<=\\*\\*).+(\\*\\*)", simplify = TRUE) -->
 <!-- # ClothesSubsFire.df <- data.frame(Subtheme = ClothesSubsFire, Post = "Play with Fire", Theme = "Clothes") -->
-<!-- # JUST READ IN THE tHEME.RMD OF LEANPUB, AND EXTRACT SUBTHEMES!  Jan 20, 2022 for five themes to Dogs -->
+<!-- Jan 20, 2022 added for five themes thru Dogs -->
 <table class="table" style="font-size: 12px; margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
@@ -6034,7 +6035,6 @@ Stopping by Woods
 </tr>
 </tbody>
 </table>
-<!-- I put the metrics analysis of Majors in ThemesAnalysis.Rmd -->
 <pre class="r"><code># Divide 360 circle into 4 quadrants.  y axis points for subthemes would be along the lines of 85, 75, 65, 55, 45 for upper right and corresponding x axis points 1, 2, 3, 4, 5.  Do similar for other three axes but two would have negative y points and two negative x.  Then match a subtheme to each point
 
 # circles &lt;- data.frame(
