updated Themes navbar; getting doubles

--- a/content/art.html
+++ b/content/art.html
@@ -1,8 +1,8 @@
 ---
-title: "Art and Artists, with Themes"
-description: the art used and themes
-date: '2021-04-10'
+title: "Art"
+date: "2022-01-21"
 menu: main
+description: the art used and themes
 ---
 
 <script src="/rmarkdown-libs/kePrint/kePrint.js"></script>
