--- a/content/art.html
+++ b/content/art.html
@@ -1,5 +1,5 @@
 ---
-title: "Art"
+title: 
 date: "2022-01-21"
 menu: main
 description: the art used and themes
@@ -9,7 +9,8 @@ description: the art used and themes
 <link href="/rmarkdown-libs/lightable/lightable.css" rel="stylesheet" />
 
 
-<p>Through Dogs, posted in early January of 2022, Themes from Art has discussed 29 Themes, eliciting subthemes from one poem, movie, rock song, and impressionist painting for each Theme, a total of 116 artistic works. The table below lists each of the art works by Theme and within theme by genre.</p>
+<p><!-- If I put in a title, the website shows TWO at the top! -->
+Through Dogs, posted in early January of 2022, Themes from Art has discussed 29 Themes, eliciting subthemes from one poem, movie, rock song, and impressionist painting for each Theme, a total of 116 artistic works. The table below lists each of the art works by Theme and within theme by genre.</p>
 <table class="table" style="font-size: 11px; margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
